syntax = "proto3";

import "environment.proto";

package agent_server.service;

message CreateEnvironmentRequest {
  string name = 1;
  data_format.Config config = 2;
  fixed64 timestamp_epoch_count = 3;
  data_format.Terrain terrain = 4;
}

// Empty since sucess/failure is signaled via gRPC status.
message CreateEnvironmentResponse {}

message DeleteEnvironmentRequest {
  string name = 1;
}

// Empty since sucess/failure is signaled via gRPC status.
message DeleteEnvironmentResponse {}

message CreateAgentRequest {
  string agent_name = 1;
  string environment_name = 2;
}

// Empty since sucess/failure is signaled via gRPC status.
message CreateAgentResponse {}

message DeleteAgentRequest {
  string name = 1;
}

// Empty since sucess/failure is signaled via gRPC status.
message DeleteAgentResponse {}

message GetEnvironmentRequest {
  string name = 1;
}

message GetEnvironmentResponse {
  data_format.Environment environment = 1;
}

message SimulateToTimeRequest {
  string environment_name = 1;
  sint64 timestamp_epoch_count = 2;
}

// Empty since sucess/failure is signaled via gRPC status.
message SimulateToTimeResponse {}

message AgentActionConfig {
  message Cost {
    enum ResourceType {
      MONEY = 0;
      LABOR = 1;
    }

    ResourceType resource_type = 1;
    uint64 count = 2;
  }

  repeated data_format.Terrain.Coordinate applied_range = 1;
  sint64 start_time_epoch_count = 2;
  sint64 end_time_epoch_count = 3;
  repeated Cost cost = 4;
}

message AgentAddCropRequest {
  string agent_name = 1;
  AgentActionConfig action_config = 2;
  string crop_type_name = 3;
}

// Empty since sucess/failure is signaled via gRPC status.
message AgentAddCropResponse {}

message AgentRemoveCropRequest {
  string agent_name = 1;
  AgentActionConfig action_config = 2;
}

// Empty since sucess/failure is signaled via gRPC status.
message AgentRemoveCropResponse {}

service AgentServer {
  rpc CreateEnvironment (CreateEnvironmentRequest) returns (CreateEnvironmentResponse);
  rpc DeleteEnvironment (DeleteEnvironmentRequest) returns (DeleteEnvironmentResponse);
  rpc CreateAgent (CreateAgentRequest) returns (CreateAgentResponse);
  rpc DeleteAgent (DeleteAgentRequest) returns (DeleteAgentResponse);
  rpc GetEnvironment (GetEnvironmentRequest) returns (GetEnvironmentResponse);
  rpc SimulateToTime (SimulateToTimeRequest) returns (SimulateToTimeResponse);
  rpc AgentAddCrop (AgentAddCropRequest) returns (AgentAddCropResponse);
  rpc AgentRemoveCrop (AgentRemoveCropRequest) returns (AgentRemoveCropResponse);
}